--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -296,6 +296,16 @@ a {
 
 }
 
+.hero-fixed-container {
+
+	width:100%;
+	height:100%;
+	position: fixed;
+	top:0;
+	left:0;
+
+}
+
 .slide {
 
 	position: absolute;
@@ -720,7 +730,22 @@ a {
 }
 
 
+.portrait {
 
+	display: none;
+	position: absolute;
+	right:0;
+	height:100%;
+	height:100vh;
+	opacity: .12;
+
+	@include stretchpoint(medium) {
+
+		display: block;
+
+	}
+
+}
 
 
 
