--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -314,13 +314,13 @@ a {
 	height:100%;
 	height:100vh;
 	background-color: $teal;
-	@include transform(translate3d(0%, 0%, 0) scale(1));
-	@include transition(all .3s ease);
+	@include transform(translate(0%, 0%));
+	@include transition(all .5s ease);
 	opacity: 1;
 
 	&.ng-hide {
 
-		@include transform(translate3d(0%, 0%, 40px) scale(1.2));
+		@include transform(translate(75%, 0%));
 		// @include transform(translate(0%, -8%));
 		opacity: 0;
 
@@ -329,10 +329,17 @@ a {
 	&.ng-hide-remove {
 
 		
-		@include transform(translate3d(0%, 0%, 0) scale(0.8));
+		@include transform(translate(-75%, 0%));
 		opacity: 0;
 
 	}
+
+	// &.ng-hide-add {
+
+	// 	@include transform(translate(75%, 0%));
+	// 	opacity: 0;
+
+	// }
 
 		
 }
