--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -300,9 +300,15 @@ a {
 
 	width:100%;
 	height:100%;
-	position: fixed;
-	top:0;
-	left:0;
+
+	@include stretchpoint(large) {
+
+		position: fixed;
+		top:0;
+		left:0;
+		
+	}
+	
 
 }
 
